[package]
name = "furink_backend"
version = "0.1.0"
edition = "2021"

authors = ["kaylen (Kaylen) <actuallyori@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
juniper = "0.15"
juniper_warp = "0.7"
log = "0.4"
serde = {version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.6"
warp = "0.3"
