[package]
name = "furink-backend"
version = "0.1.0"
edition = "2021"

authors = ["kaylendog (Kaylen) <actuallyori@gmail.com>"]

[dependencies]
base64 = "0.13"
bitflags = "1.3"
dotenv = "0.15"
env_logger = "0.9"
hmac = "0.12"
juniper = "0.15.7"
juniper_warp = "0.7.0"
jwt = "0.16"
log = "0.4"
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
