[package]
name = "furink-backend"
version = "0.1.0"
edition = "2021"

authors = ["kaylendog (Kaylen) <actuallyori@gmail.com>"]

[dependencies]
# generic dependencies
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
# auth dependencies
base64 = "0.13"
bitflags = "1.3"
hmac = "0.12"
jwt = "0.16"
sha2 = "0.10"
# grpc dependencies
tonic = "0.6"
# graphql dependencies
juniper = "0.15.7"
juniper_warp = "0.7.0"
# web server dependencies
warp = "0.3"

furink-proto = { git = "https://github.com/furinkapp/proto-rust.git", branch = "main" }
